add the applicationbar icon

--- a/Bitunion/BuForumPage.xaml
+++ b/Bitunion/BuForumPage.xaml
@@ -19,7 +19,7 @@
         <shell:ApplicationBar x:Key="forum" IsVisible="True">
            
                 <shell:ApplicationBarIconButton x:Name="refresh" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click" />
-                <shell:ApplicationBarIconButton x:Name="newpost" IconUri="/Images/post.png" Text="发帖" Click="newpost_click" />
+                <shell:ApplicationBarIconButton x:Name="newpost" IconUri="/Images/post.ico" Text="发帖" Click="newpost_click" />
                 <shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
                 <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />
             <shell:ApplicationBar.MenuItems>
@@ -28,7 +28,7 @@
         </shell:ApplicationBar>
      
         <shell:ApplicationBar x:Key="post" IsVisible="True">
-            <shell:ApplicationBarIconButton x:Name="post" IconUri="/Images/post.png" Text="提交" Click="post_click" />
+            <shell:ApplicationBarIconButton x:Name="post" IconUri="/Images/ok.png" Text="提交" Click="post_click" />
             <shell:ApplicationBarIconButton x:Name="cancel" IconUri="/Images/cancel.png" Text="取消" Click="cancel_Click" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.Resources>
