--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -43,7 +43,7 @@
     </Grid>
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar x:Name="ForumAppBar" IsVisible="True" IsMenuEnabled="True" Mode="Default" Opacity="0.5" >
-            <shell:ApplicationBarIconButton x:Name="longin" IconUri="/Images/login.png" Text="登录" Click="login_click" />
+            <shell:ApplicationBarIconButton x:Name="longin" IconUri="/Images/ok.png" Text="登录" Click="login_click" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
