--- a/Bitunion/MainPage.xaml
+++ b/Bitunion/MainPage.xaml
@@ -86,7 +86,7 @@
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized" Opacity="0.5" >
 
-            <shell:ApplicationBarIconButton x:Name="refreshbtn" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click" />
+            <shell:ApplicationBarIconButton x:Name="refreshbtn" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click" IsEnabled="False" />
             <shell:ApplicationBarIconButton x:Name="logoutbtn" IconUri="/Images/logout.png" Text="登出" Click="logout_click" />
             <!--<shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
             <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />-->
