--- a/Bitunion/BuSettingPage.xaml
+++ b/Bitunion/BuSettingPage.xaml
@@ -36,6 +36,8 @@
             <phone:PivotItem Header="关于">
                 <Grid>
                     <TextBlock Text="版本：1.0" Margin="10,10,318,554" FontSize="24"/>
+                    <Button Margin="100,105,100,0" Height="85" Content="打分并评价" VerticalAlignment="Top" Click="Button_Click_1"  />
+                    <Button Margin="100,209,100,0"  Height="85" Content="意见与建议" VerticalAlignment="Top" IsEnabled="False" />
                 </Grid>
             </phone:PivotItem>
         </phone:Pivot>
