--- a/Bitunion/MainPage.xaml
+++ b/Bitunion/MainPage.xaml
@@ -84,15 +84,11 @@
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" IsHitTestVisible="False" />-->
     </Grid>
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized" Opacity="0.5" >
-
-            <shell:ApplicationBarIconButton x:Name="refreshbtn" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click" IsEnabled="False" />
-            <shell:ApplicationBarIconButton x:Name="logoutbtn" IconUri="/Images/logout.png" Text="登出" Click="logout_click" />
-            <!--<shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
-            <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />-->
-
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized" Opacity="1" >
+            <shell:ApplicationBarIconButton x:Name="refreshbtn" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click"/>
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="设置" Click="Setting_Click" />
+                <shell:ApplicationBarMenuItem Text="登出" Click="logout_click" />
             </shell:ApplicationBar.MenuItems>
 
         </shell:ApplicationBar>
