--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -23,6 +23,7 @@
             <shell:ApplicationBarIconButton x:Name="reply" IconUri="/Images/reply.png" Text="回复" Click="reply_click" />
             <shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
             <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />
+            <shell:ApplicationBarIconButton x:Name="refresh" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click" />
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="第一页" Click="FirstPage_Click" />
                 <shell:ApplicationBarMenuItem Text="最后一页" Click="LastPage_Click" />
