--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -16,9 +16,9 @@
     xmlns:toolkit ="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit">
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
-    <Grid x:Name="LayoutRoot" Margin="0,0,0,0">
+    <Grid x:Name="LayoutRoot" Margin="0,0,0,-16">
         <Grid.Background>
-            <ImageBrush x:Name="BkPic" ImageSource="/Images/loginpage.png"  Opacity ="0.5"/>
+            <ImageBrush x:Name="BkPic" ImageSource="/Images/loginpage.png"  Opacity ="0.5" Stretch="UniformToFill"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -33,16 +33,16 @@
             <toolkit:PhoneTextBox x:Name="ID" Hint="请输入账号" HorizontalAlignment="Left" Height="72" Margin="39,92,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="383" FontSize="24"/>
             <PasswordBox x:Name="Password" Margin="39,170,34,0" VerticalAlignment="Top" FontSize="24"/>
             <toolkit:ToggleSwitch x:Name="isRemPassword" HorizontalAlignment="Left" Margin="39,240,0,0" VerticalAlignment="Top" Content="开启" Unchecked="isRemPassword_Unchecked" Checked="isRemPassword_Checked" Width="383" Header="记住密码" />
-            <toolkit:ToggleSwitch x:Name="isAutoLogin" HorizontalAlignment="Left" Margin="39,343,0,0" VerticalAlignment="Top" Unchecked="isAutoLogin_Unchecked"  Checked="isAutoLogin_Checked" Width="383" Header="自动登录" Content="开启"/>
+            <toolkit:ToggleSwitch x:Name="isAutoLogin" HorizontalAlignment="Left" Margin="39,340,0,0" VerticalAlignment="Top" Unchecked="isAutoLogin_Unchecked"  Checked="isAutoLogin_Checked" Width="383" Header="自动登录" Content="开启"/>
             <toolkit:ToggleSwitch x:Name="tsNetWork" HorizontalAlignment="Left" Margin="39,440,0,0" VerticalAlignment="Top"  Width="383" Header="网络模式" Content="外网" Checked="NetWork_Checked" Unchecked="NetWork_Unchecked"/>
         </Grid>
         <ProgressBar x:Name="PgBar" HorizontalAlignment="Left" Height="15" Margin="10,-3,0,0" VerticalAlignment="Top" Width="456" IsIndeterminate="True"/>
-        <TextBlock HorizontalAlignment="Left" Margin="28,0,0,73" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子”" RenderTransformOrigin="-2.73,0.436" Width="416" FontSize="32" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="94" VerticalAlignment="Bottom"/>
+        <TextBlock HorizontalAlignment="Left" Margin="12,0,0,118" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子”" RenderTransformOrigin="-2.73,0.436" Width="416" FontSize="24" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="40" VerticalAlignment="Bottom"/>
 
 
     </Grid>
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar x:Name="ForumAppBar" IsVisible="True" IsMenuEnabled="True" Mode="Default" Opacity="1" >
+        <shell:ApplicationBar x:Name="ForumAppBar" IsVisible="True" IsMenuEnabled="True" Mode="Default" Opacity="0" >
             <shell:ApplicationBarIconButton x:Name="longin" IconUri="/Images/ok.png" Text="登录" Click="login_click" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
