--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -41,7 +41,7 @@
        
         <!--TitlePanel 包含应用程序的名称和页标题-->
 
-        <TextBlock x:Name="ThreadName"   TextWrapping="Wrap" Text="页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称" Margin="-1,10,0,0"  FontSize="20" HorizontalAlignment="Right" Width="481" Padding="5,0,10,5" Height="58" VerticalAlignment="Top"/>
+        <TextBlock x:Name="ThreadName"   TextWrapping="Wrap" Text="页称" Margin="-1,10,0,0"  FontSize="20" HorizontalAlignment="Right" Width="481" Padding="5,0,10,5" Height="58" VerticalAlignment="Top"/>
 
 
         <!--ContentPanel - 在此处放置其他内容-->
@@ -53,10 +53,10 @@
 
             <!--具有文字环绕的双线列表-->
            <ScrollViewer Name="scrollViewer" Margin="0,0,0,0">
-                <ItemsControl x:Name="PostItemsList" HorizontalAlignment="Left" ItemsSource="{Binding PostItems}" Grid.Column="0" Grid.RowSpan="1"  Margin="0,0,0,0"  >
+                <ItemsControl x:Name="PostItemsList" ItemsSource="{Binding PostItems}" Grid.Column="0" Grid.RowSpan="1"  Margin="0,0,0,0"  >
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel x:Name="PostPanel" Margin="0">
+                        <StackPanel x:Name="PostPanel" Margin="0,0,0,0">
                             <toolkit:ContextMenuService.ContextMenu>
                                 <toolkit:ContextMenu>
                                     <toolkit:MenuItem Header="引用回复" Click="QuoteReply_Click"/>
@@ -73,21 +73,22 @@
                                 <TextBlock Grid.Column="1" Text="{Binding FloorNo}" TextWrapping="Wrap" Margin="0,10,8,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="26" HorizontalAlignment="Right" TextAlignment="Right" Foreground="{StaticResource PhoneAccentBrush}"/>
                             </Grid>
                           
-                            <ItemsControl HorizontalAlignment="Left" ItemsSource="{Binding QuoteItems}" Visibility="{Binding QuoteItems,Converter={StaticResource QuoteConverter}}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" Margin="30,0" >
+                            <ItemsControl ItemsSource="{Binding QuoteItems}" Visibility="{Binding QuoteItems,Converter={StaticResource QuoteConverter}}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" Margin="30,0" >
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel Margin="0">
-                                            <Border BorderThickness="0,0,0,0"  HorizontalAlignment="Left" Background="#FF494747" Margin="0,10,0,0">
-                                                <TextBlock Text="{Binding QuoteMsg}"  TextWrapping="Wrap" FontSize="24" Margin="3,0,-3,0" Width="400" Padding="5,5,10,5"/>
+                                            <Border BorderThickness="0,0,0,0"   Background="#FF494747" Margin="0,10,0,0">
+                                                <TextBlock Text="{Binding QuoteMsg}"  TextWrapping="Wrap" FontSize="24" Margin="3,0" Padding="5"/>
                                             </Border>                                        
                                         </StackPanel>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
-     
-                            <local:EyeableTextBlock Style="{StaticResource SuperTextBlockSytle}" FontSize="25" Text="{Binding Message}" Margin="6,15,6,5" Padding="0,0,0,0" Width="Auto"  />
-                                                
-                            <!--<Button Content="引用" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="90" Height="66" FontSize="18"/>-->
+
+                              
+                                    <local:EyeableTextBlock Style="{StaticResource SuperTextBlockSytle}" FontSize="25" Text="{Binding Message}" Margin="6,15,10,5" Padding="0,0,0,0"  Width="auto"/>
+                           
+                                <!--<Button Content="引用" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="90" Height="66" FontSize="18"/>-->
                               
                                     <TextBlock Text="本帖包含图片附件: "  Visibility="{Binding ImageSrc, Converter={StaticResource ImgConverter}}"   FontSize="25" Margin="6,15,12,15"/>
 
@@ -105,7 +106,7 @@
           </ScrollViewer>
         </Grid>
         
-        <ProgressBar x:Name="pgbar" HorizontalAlignment="Left" Height="11" Margin="-1,0,0,0" VerticalAlignment="Top" Width="480" IsIndeterminate="True" Grid.RowSpan="2"/>
+        <ProgressBar x:Name="pgbar"  Height="11" Margin="-1,0,0,0" VerticalAlignment="Top" Width="480" IsIndeterminate="True" Grid.RowSpan="2"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
