--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -30,14 +30,14 @@
 
         <!--ContentPanel - 在此处放置其他内容-->
         <Grid x:Name="GridContent" Margin="12,10,12,0" Grid.RowSpan="2">
-            <toolkit:PhoneTextBox x:Name="ID" Hint="请输入账号" HorizontalAlignment="Left" Height="72" Margin="39,92,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="383" FontSize="24"/>
+            <toolkit:PhoneTextBox x:Name="ID" Hint="请输入账号" Height="72" Margin="39,92,34,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" FontSize="24"/>
             <PasswordBox x:Name="Password" Margin="39,170,34,0" VerticalAlignment="Top" FontSize="24"/>
-            <toolkit:ToggleSwitch x:Name="isRemPassword" HorizontalAlignment="Left" Margin="39,240,0,0" VerticalAlignment="Top" Content="开启" Unchecked="isRemPassword_Unchecked" Checked="isRemPassword_Checked" Width="383" Header="记住密码" />
-            <toolkit:ToggleSwitch x:Name="isAutoLogin" HorizontalAlignment="Left" Margin="39,340,0,0" VerticalAlignment="Top" Unchecked="isAutoLogin_Unchecked"  Checked="isAutoLogin_Checked" Width="383" Header="自动登录" Content="开启"/>
-            <toolkit:ToggleSwitch x:Name="tsNetWork" HorizontalAlignment="Left" Margin="39,440,0,0" VerticalAlignment="Top"  Width="383" Header="网络模式" Content="外网" Checked="NetWork_Checked" Unchecked="NetWork_Unchecked"/>
+            <toolkit:ToggleSwitch x:Name="isRemPassword"  Margin="39,240,34,0" VerticalAlignment="Top" Content="开启" Unchecked="isRemPassword_Unchecked" Checked="isRemPassword_Checked"  Header="记住密码" />
+            <toolkit:ToggleSwitch x:Name="isAutoLogin" Margin="39,340,34,0" VerticalAlignment="Top" Unchecked="isAutoLogin_Unchecked"  Checked="isAutoLogin_Checked"  Header="自动登录" Content="开启"/>
+            <toolkit:ToggleSwitch x:Name="tsNetWork" Margin="39,440,34,0" VerticalAlignment="Top"  Header="网络模式" Content="外网" Checked="NetWork_Checked" Unchecked="NetWork_Unchecked"/>
         </Grid>
-        <ProgressBar x:Name="PgBar" HorizontalAlignment="Left" Height="15" Margin="10,-3,0,0" VerticalAlignment="Top" Width="456" IsIndeterminate="True"/>
-        <TextBlock HorizontalAlignment="Left" Margin="12,0,0,118" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子”" RenderTransformOrigin="-2.73,0.436" Width="416" FontSize="24" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="40" VerticalAlignment="Bottom"/>
+        <ProgressBar x:Name="PgBar" Height="15" Margin="10,-3,0,0" VerticalAlignment="Top"  IsIndeterminate="True"/>
+        <TextBlock Margin="12,0,0,118" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子”" RenderTransformOrigin="-2.73,0.436" FontSize="24" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="40" VerticalAlignment="Bottom"/>
 
 
     </Grid>
