--- a/Bitunion/BuSettingPage.xaml
+++ b/Bitunion/BuSettingPage.xaml
@@ -35,9 +35,9 @@
             <!--枢轴项二-->
             <phone:PivotItem Header="关于">
                 <Grid>
-                    <TextBlock Text="版本：0.9.1.0" Margin="10,10,296,554" FontSize="24"/>
+                    <TextBlock x:Name="VersionText" Margin="10,10,137,554" FontSize="24"/>
                     <Button Margin="100,105,100,0" Height="85" Content="打分并评价" VerticalAlignment="Top" Click="Button_Click_1"  />
-                    <Button Margin="100,209,100,0"  Height="85" Content="意见与建议" VerticalAlignment="Top" IsEnabled="False" />
+                    <Button Margin="100,209,100,0"  Height="85" Content="意见与建议" VerticalAlignment="Top" Click="Button_Click_2"  />
                 </Grid>
             </phone:PivotItem>
         </phone:Pivot>
