--- a/Bitunion/MainPage.xaml
+++ b/Bitunion/MainPage.xaml
@@ -84,7 +84,7 @@
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" IsHitTestVisible="False" />-->
     </Grid>
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized" Opacity="1" >
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True"  Opacity="1" >
             <shell:ApplicationBarIconButton x:Name="refreshbtn" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click"/>
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="设置" Click="Setting_Click" />
